--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: zendesk/jekyll-theme-zendesk-garden
+remote_theme: zendesk/jekyll-theme-zendesk-garden@v0.7.3
 
 plugins:
   - jekyll-redirect-from
