new: properly label index page to match PROD env
Remove experimental _index.html

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ owner_url: https://tuakiri.ac.nz/
 version: false
 
 sidebar:
+  - index
   - label: Tuakiri Core Documents
     children:
       - test
